Se mejora tema con iconos y estilo

--- a/template/site/index.html
+++ b/template/site/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Site Title-->
-    <title>Chiropractic</title>
+    <title>Odontología ULS</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -35,8 +35,10 @@
                                 <address class="contact-info reveal-sm-inline-block text-left offset-none">
                                     <div class="p unit unit-spacing-xs unit-horizontal">
                                         <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                                        <div class="unit-body"><a href="callto:#" class="text-gray-darker">1-800-1234-567</a>
-                                            <br/><a href="callto:#" class="text-gray-darker">1-800-3214-654</a></div>
+                                        <div class="unit-body">
+                                            <a href="callto:#" class="text-gray-darker">56-51-2422000</a>
+                                            <br/>
+                                            <a href="callto:#" class="text-gray-darker">56-51-2422000</a></div>
                                     </div>
                                 </address>
                             </div>
@@ -46,7 +48,7 @@
                                 <address class="contact-info reveal-sm-inline-block text-left">
                                     <div class="p unit unit-horizontal unit-spacing-xs">
                                         <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                                        <div class="unit-body"><a href="#" class="text-gray-darker">2130 Fulton Street San Diego<br/>CA 94117-1080 USA</a></div>
+                                        <div class="unit-body"><a href="#" class="text-gray-darker">Raúl Bitrán<br/>La Serena, Chile</a></div>
                                     </div>
                                 </address>
                             </div>
@@ -179,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div data-slide-bg="images/intros/slide-02.jpg" class="swiper-slide">
+                    <div data-slide-bg="images/intros/slide-05.jpg" class="swiper-slide">
                         <div class="swiper-caption">
                             <div class="swiper-slide-caption">
                                 <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
@@ -191,7 +193,7 @@
                             </div>
                         </div>
                     </div>
-                    <div data-slide-bg="images/intros/slide-03.jpg" class="swiper-slide">
+                    <div data-slide-bg="images/intros/slide-06.jpg" class="swiper-slide">
                         <div class="swiper-caption">
                             <div class="swiper-slide-caption">
                                 <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
@@ -512,10 +514,10 @@
             <!-- Google map-->
             <!-- RD Google Map-->
             <div class="rd-google-map">
-                <div id="rd-google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" data-styles='[{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"geometry.fill","stylers":[{"visibility":"on"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#b4d4e1"},{"visibility":"on"}]}]' class="rd-google-map__model"></div>
+                <div id="rd-google-map" data-zoom="16" data-x="-71.242617" data-y="-29.910487" data-styles='[{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"geometry.fill","stylers":[{"visibility":"on"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#b4d4e1"},{"visibility":"on"}]}]' class="rd-google-map__model"></div>
                 <ul class="rd-google-map__locations">
-                    <li data-x="-73.9874068" data-y="40.643180">
-                        <p>9870 St Vincent Place, Glasgow, DC 45 Fr 45</p>
+                    <li data-x="-71.242617" data-y="-29.910487">
+                        <p>Clinica Odontologíca de la Universidad de La Serena</p>
                     </li>
                 </ul>
             </div>
