--- a/template/site/css/custom.css
+++ b/template/site/css/custom.css
@@ -9,3 +9,8 @@ div.after-footer{
 	color: #f1f1f1;
 	font-weight: 200;
 }
+
+div.swiper-container h2,
+div.swiper-container h5{
+	text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.4);
+}
