--- a/template/site/index.html
+++ b/template/site/index.html
@@ -87,7 +87,7 @@
                 </nav>
             </div>
             <!--Swiper-->
-            <div data-loop="true" data-height="" data-slide-effect="fade" data-dragable="false" data-min-height="400px" class="swiper-container swiper-slider bg-white">
+            <div data-loop="true" data-autoplay="true" data-height="" data-slide-effect="fade" data-dragable="false" data-min-height="400px" class="swiper-container swiper-slider bg-white">
                 <div class="swiper-wrapper text-center">
                     <div id="page-loader" data-slide-bg="images/intros/slide-04.jpg" class="swiper-slide">
                         <div class="swiper-caption">
@@ -169,12 +169,13 @@
                 </div>
             </section>
             <!-- Our Team-->
-            <section class="section-98 section-sm-110">
-                <div class="shell">
-                <h3>Nuestros Docentes</h3>
-                <hr class="divider divider-lg bg-primary">
-                <div class="offset-top-41 offset-md-top-60">
-                    <p>Profesionales con gran prestigio académico</p>
+            <section>
+                <div class="shell" style='padding:50px 0 50px 0;'>
+                    <h3>Nuestros Docentes</h3>
+                    <hr class="divider divider-lg bg-primary">
+                    <div class="offset-top-41 offset-md-top-60">
+                        <p>Profesionales con gran prestigio académico</p>
+                    </div>
                 </div>
                 <div class="reveal-md-flex range-xs-center">
                     <!-- Thumbnail Josip-->
@@ -217,7 +218,6 @@
                         </div>
                         <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
                     </figure>
-                </div>
                 </div>
             </section>
             <!-- Latest blog posts-->
