se agregan enlaces iniciales al menú de clínica

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -49,7 +49,19 @@
                             </li>
                             <li><a href="/docentes"><span>Docentes</span></a>
                             </li>
-                            <li><a href="#"><span>Clínica</span></a>
+                            <li><a href="/clinica"><span>Clínica</span></a>
+                                <ul class="rd-navbar-dropdown">
+                                    <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a>
+                                    </li>
+                                    <li><a href="#"><span class="text-middle">Misión - Visión</span></a>
+                                    </li>
+                                    <li><a href="#"><span class="text-middle">Equipo</span></a>
+                                    </li>
+                                    <li><a href="#"><span class="text-middle">Cátedra</span></a>
+                                    </li>
+                                    <li><a href="#"><span class="text-middle">Paciente</span></a>
+                                    </li>
+                                </ul>
                             </li>
                             <li><a href="#"><span>Contacto</span></a>
                             </li>
