--- a/web/templates/carrera/basecontenido.html
+++ b/web/templates/carrera/basecontenido.html
@@ -29,8 +29,7 @@
         <!-- Page Head-->
         <header class="page-head">
             <!-- RD Navbar minimal-->
-            {% block navegation %}{% include 'navegation.html' %}{% endblock %}
-            {% block swiper %}{% include 'swiper.html' %}{% endblock %}
+            {% block navegation %}{% include 'carrera/navegation.html' %}{% endblock %}
         </header>
         <!-- Page Contents-->
         <main class="page-content">
@@ -39,7 +38,7 @@
         <!-- Page Footer-->
         <!-- Default footer-->
         <footer class="section-relative section-34 section-md-66 page-footer bg-lighter context-light" id="footer-principal">
-                {% block footer %}{% include 'footer.html' %}{% endblock %}
+                {% block footer %}{% include 'carrera/footer.html' %}{% endblock %}
         </footer>
     </div>
     <!-- Java script-->
