Se agrega base de contenido para app clinica

--- a/web/templates/clinica/home.html
+++ b/web/templates/clinica/home.html
@@ -1,4 +1,4 @@
-{% extends "carrera/base.html" %} 
+{% extends "clinica/base.html" %} 
 {% load staticfiles %} 
 
 {% block title %}Home{% endblock %} 
