--- a/web/templates/carrera/navegation.html
+++ b/web/templates/carrera/navegation.html
@@ -45,7 +45,20 @@
                                 </ul>
                             </li>
                             <li class="{% active_menu '/docentes' %}"><a href="/docentes"><span>Docentes</span></a></li>
-                            <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a></li>
+                            <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a>
+                                <ul class="rd-navbar-dropdown">
+                                    <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a>
+                                    </li>
+                                    <li><a href="/clinica/mision"><span class="text-middle">Misión - Visión</span></a>
+                                    </li>
+                                    <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a>
+                                    </li>
+                                    <li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a>
+                                    </li>  
+                                    <li><a href="/clinica/paciente"><span class="text-middle">Paciente</span></a>
+                                    </li>                                                                                                            
+                                </ul>  
+                            </li>
                             <li><a href="#"><span>Contacto</span></a></li>
                         </ul>
                     </div>
