--- a/web/templates/clinica/contenido.html
+++ b/web/templates/clinica/contenido.html
@@ -33,7 +33,25 @@
         </header>
         <!-- Page Contents-->
         <main class="page-content">
-            {% block content %}{% endblock %}
+              <!-- Modern Breadcrumbs-->
+              <section class="breadcrumb-modern context-dark text-md-left">
+                <div class="shell section-34 section-md-top-110 section-md-bottom-41">
+                  <h1>{{ contenido.seccion }}</h1>
+                  <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
+                    <li><a href="/clinica">Clínica</a></li>
+                    <li>{{ contenido.seccion }}</li>
+                  </ul>
+                </div>
+              </section>
+              <!-- Page Content-->
+              <main class="page-content">
+                <!-- Our team-->
+                <section class="section-98 section-sm-110">
+                  <div class="shell">
+                    {% autoescape off %}{{ contenido.texto }}{% endautoescape %}
+                  </div>
+                </section>
+              </main>
         </main>
         <!-- Page Footer-->
         <!-- Default footer-->
