Se mejora el theme y se agregan imagenes vectoriales

--- a/template/site/index.html
+++ b/template/site/index.html
@@ -40,7 +40,9 @@
                                 </address>
                             </div>
                             <!--Navbar Brand-->
-                            <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="#"><img width='316' height='57' class='img-responsive' src='images/logo.png' alt=''/></a></div>
+                            <div class="rd-navbar-brand veil reveal-md-inline-block">
+                                <a href="#"><img width='316' height='57' class='img-responsive' src='images/logo.svg' alt=''/></a>
+                            </div>
                             <div>
                                 <address class="contact-info reveal-sm-inline-block text-left offset-none">
                                     <div class="p unit unit-horizontal unit-spacing-xs">
@@ -305,6 +307,32 @@
                     <div class="offset-top-50"><a href="#" class="btn btn-ellipse btn-java">Ver todas las noticias</a></div>
                 </div>
             </section>
+            <!-- Organigrama -->
+            <section class="section-98 section-sm-110">
+                <div class="shell">
+                    <h3>Estructura Organizacional</h3>
+                    <hr class="divider divider-lg bg-primary">
+                    <div class="offset-top-41 offset-md-top-60">
+                        <p></p>
+                    </div>
+                </div>
+                <div>
+                    <img width="98%" height="auto" src="images/carrera/organigrama_carrera.svg" alt="organigrama" />
+                </div>
+            </section>
+            <!-- Malla -->
+            <section class="section-98 section-sm-110">
+                <div class="shell">
+                    <h3>Malla de la Carrera</h3>
+                    <hr class="divider divider-lg bg-primary">
+                    <div class="offset-top-41 offset-md-top-60">
+                        <p></p>
+                    </div>
+                </div>
+                <div>
+                    <img width="98%" height="auto" src="images/carrera/malla_carrera.svg" alt="organigrama" />
+                </div>
+            </section>
             <!-- Google map-->
             <!-- RD Google Map-->
             <!--
@@ -328,7 +356,7 @@
                             <div class="range range-md-justify range-md-middle">
                                 <div class="cell-md-4 cell-md-push-1 text-md-left">
                                     <!-- Footer brand-->
-                                    <div class="footer-brand reveal-inline-block"><a href="#"><img width='316' height='57' class='img-responsive' src='images/logo-dark.png' alt=''/></a></div>
+                                    <div class="footer-brand reveal-inline-block"><a href="#"><img width='316' height='57' class='img-responsive' src='images/logo-dark.svg' alt=''/></a></div>
                                 </div>
                                 <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
                                     <ul class="list-inline">
