--- a/template/site/index.html
+++ b/template/site/index.html
@@ -310,14 +310,18 @@
             <!-- Organigrama -->
             <section class="section-98 section-sm-110">
                 <div class="shell">
-                    <h3>Estructura Organizacional</h3>
+                    <h3>Organigrama</h3>
                     <hr class="divider divider-lg bg-primary">
                     <div class="offset-top-41 offset-md-top-60">
                         <p></p>
                     </div>
                 </div>
                 <div>
-                    <img width="98%" height="auto" src="images/carrera/organigrama_carrera.svg" alt="organigrama" />
+                    <img width="60%" height="auto" src="images/carrera/organigrama_carrera.svg" alt="organigrama" />
+                </div>
+                <hr />
+                <div>
+                    <img width="60%" height="auto" src="images/carrera/organigrama_clinica.svg" alt="organigrama" />
                 </div>
             </section>
             <!-- Malla -->
@@ -330,7 +334,20 @@
                     </div>
                 </div>
                 <div>
-                    <img width="98%" height="auto" src="images/carrera/malla_carrera.svg" alt="organigrama" />
+                    <img width="98%" height="auto" src="images/carrera/malla_carrera.svg" alt="malla" />
+                </div>
+            </section>
+            <!-- Estructura -->
+            <section class="section-98 section-sm-110">
+                <div class="shell">
+                    <h3>Estructura Organizacional</h3>
+                    <hr class="divider divider-lg bg-primary">
+                    <div class="offset-top-41 offset-md-top-60">
+                        <p></p>
+                    </div>
+                </div>
+                <div>
+                    <img width="98%" height="auto" src="images/carrera/estructura_carrera.svg" alt="estructura" />
                 </div>
             </section>
             <!-- Google map-->
