se añade aplicación carrera y se incluye menú admisión

--- a/web/templates/carrera/navegation.html
+++ b/web/templates/carrera/navegation.html
@@ -37,7 +37,7 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '/' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li><a href="#"><span>Admisón</span></a></li>
+                            <li><a href="/carrera/admision"><span>Admisión</span></a></li>
                             <li><a href="#"><span>Carrera</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="#"><span class="text-middle">Plan Estudios</span></a></li>
@@ -54,10 +54,10 @@
                                     <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a>
                                     </li>
                                     <li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a>
-                                    </li>  
+                                    </li>
                                     <li><a href="/clinica/paciente"><span class="text-middle">Paciente</span></a>
-                                    </li>                                                                                                            
-                                </ul>  
+                                    </li>
+                                </ul>
                             </li>
                             <li><a href="#"><span>Contacto</span></a></li>
                         </ul>
