Se agrega módulo de servicios de clínica

--- a/web/templates/carrera/navegation.html
+++ b/web/templates/carrera/navegation.html
@@ -8,7 +8,7 @@
                     <address class="contact-info reveal-sm-inline-block text-left offset-none">
                         <div class="p unit unit-spacing-xs unit-horizontal">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                            <div class="unit-body"><a href="callto:#" class="text-gray-darker">51 2 334658</a></div>
+                            <div class="unit-body"><a href="callto:#" class="text-gray-darker">+56-51-2334660</a></div>
                         </div>
                     </address>
                 </div>
@@ -18,7 +18,7 @@
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                            <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas 2283<br/>La Serena</a></div>
+                            <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas N°1015, <br/>La Serena</a></div>
                         </div>
                     </address>
                 </div>
@@ -49,14 +49,18 @@
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a>
                                     </li>
-                                    <li><a href="/clinica/mision"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><span class="text-middle">Servicios</span>
+                                        <ul>
+                                            <li><a href="/clinica/servicios/odontologia">Odontología</a></li>
+                                            <li><a href="/clinica/servicios/imagenologia">Imagenología</a></li>                       
+                                        </ul>
                                     </li>
                                     <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a>
                                     </li>
                                     <li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a>
                                     </li>  
                                     <li><a href="/clinica/paciente"><span class="text-middle">Paciente</span></a>
-                                    </li>                                                                                                            
+                                    </li>                                               
                                 </ul>  
                             </li>
                             <li><a href="#"><span>Contacto</span></a></li>
