--- a/web/templates/clinica/navegation.html
+++ b/web/templates/clinica/navegation.html
@@ -49,14 +49,18 @@
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a>
                                     </li>
-                                    <li><a href="/clinica/mision"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><a href="/clinica/servicios"><span class="text-middle">Servicios</span></a>
+                                        <ul>
+                                            <li>Odontología</li>
+                                            <li>Imagenología</li>                       
+                                        </ul>
                                     </li>
                                     <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a>
                                     </li>
                                     <li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a>
                                     </li>  
                                     <li><a href="/clinica/paciente"><span class="text-middle">Paciente</span></a>
-                                    </li>                                                                                                            
+                                    </li>                                                 
                                 </ul>  
                             </li>
                             <li><a href="#"><span>Contacto</span></a></li>
