--- a/template/site/index.html
+++ b/template/site/index.html
@@ -79,7 +79,7 @@
                                         </li>
                                         <li><a href="#"><span>Clínica</span></a>
                                         </li>
-                                        <li><a href="#"><span>Contacto</span></a>
+                                        <li><a href="contenido.html"><span>Contacto</span></a>
                                         </li>
                                     </ul>
                                 </div>
