--- a/web/templates/clinica/equipo.html
+++ b/web/templates/clinica/equipo.html
@@ -77,50 +77,41 @@
                             <div data-photo-swipe-gallery="gallery" class="row text-sm-left">
                               <div data-filter="Chiropractic Care" class="col-md-12 isotope-item">
                                     <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-center text-left">
+                                      <div class="range range-xs-center">
                                       {% for director in directores %}
-                                        <div class="cell-xs-8 cell-md-4 offset-top-41 offset-md-top-0 inset-md-right-30">
-                                          <div class="unit unit-xl-horizontal unit-lg-horizontal unit-md-vertical unit-sm-horizontal unit-xs-horizontal unit-spacing-sm">
-                                            <div class="unit-left"><img src="{{ director.foto.url }}" width="110" height="110" alt="" class="img-responsive"/>
-                                            </div>
-                                          </div>
-                                            <div class="unit-body">
-                                              <h5 class="text-bold text-primary">{{ director.nombre_completo}}</h5>
-                                            </div>
+                                        <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                          <figure class="thumbnail-josip"><a href="team-member.html"><img width="270" height="270" src="{{ director.foto.url }}" alt=""/></a>
+                                            <div class="thumbnail-desc">
+                                              <h5 class="thumbnail-josip-title text-bold text-white">{{ director.nombre_completo}}</h5>
+                                          </figure>
                                         </div>
                                       {% endfor %}
                                       </div>
-                                    </div>
+                                    </div> 
                               </div>
                               <div data-filter="Massage Therapy" class="col-md-12 isotope-item">
                                     <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-center text-left">
+                                      <div class="range range-xs-center">
                                       {% for enfermera in enfermeras %}
-                                        <div class="cell-xs-8 cell-md-4 offset-top-41 offset-md-top-0 inset-md-right-30">
-                                          <div class="unit unit-xl-horizontal unit-lg-horizontal unit-md-vertical unit-sm-horizontal unit-xs-horizontal unit-spacing-sm">
-                                            <div class="unit-left"><img src="{{ enfermera.foto.url }}" width="110" height="110" alt="" class="img-responsive"/>
-                                            </div>
-                                          </div>
-                                            <div class="unit-body">
-                                              <h5 class="text-bold text-primary">{{ enfermera.nombre_completo}}</h5>
-                                            </div>
+                                        <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                          <figure class="thumbnail-josip"><a href="team-member.html"><img width="270" height="270" src="{{ enfermera.foto.url }}" alt=""/></a>
+                                            <div class="thumbnail-desc">
+                                              <h5 class="thumbnail-josip-title text-bold text-white">{{ enfermera.nombre_completo}}</h5>
+                                          </figure>
                                         </div>
                                       {% endfor %}
                                       </div>
-                                    </div>                                
+                                    </div>                             
                               </div>
                               <div data-filter="Lifestyle Advice" class="col-md-12 isotope-item">
                                     <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-center text-left">
+                                      <div class="range range-xs-center">
                                       {% for tecnico in tecnicos %}
-                                        <div class="cell-xs-8 cell-md-4 offset-top-41 offset-md-top-0 inset-md-right-30">
-                                          <div class="unit unit-xl-horizontal unit-lg-horizontal unit-md-vertical unit-sm-horizontal unit-xs-horizontal unit-spacing-sm">
-                                            <div class="unit-left"><img src="{{ tecnico.foto.url }}" width="110" height="110" alt="" class="img-responsive"/>
-                                            </div>
-                                          </div>
-                                            <div class="unit-body">
-                                              <h5 class="text-bold text-primary">{{ tecnico.nombre_completo}}</h5>
-                                            </div>
+                                        <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                          <figure class="thumbnail-josip"><a href="team-member.html"><img width="270" height="270" src="{{ tecnico.foto.url }}" alt=""/></a>
+                                            <div class="thumbnail-desc">
+                                              <h5 class="thumbnail-josip-title text-bold text-white">{{ tecnico.nombre_completo}}</h5>
+                                          </figure>
                                         </div>
                                       {% endfor %}
                                       </div>
@@ -128,16 +119,13 @@
                               </div>
                               <div data-filter="Nutrition Counseling" class="col-md-12 isotope-item">
                                     <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-center text-left">
+                                      <div class="range range-xs-center">
                                       {% for secretaria in secretarias %}
-                                        <div class="cell-xs-8 cell-md-4 offset-top-41 offset-md-top-0 inset-md-right-30">
-                                          <div class="unit unit-xl-horizontal unit-lg-horizontal unit-md-vertical unit-sm-horizontal unit-xs-horizontal unit-spacing-sm">
-                                            <div class="unit-left"><img src="{{ secretaria.foto.url }}" width="110" height="110" alt="" class="img-responsive"/>
-                                            </div>
-                                          </div>
-                                            <div class="unit-body">
-                                              <h5 class="text-bold text-primary">{{ secretaria.nombre_completo}}</h5>
-                                            </div>
+                                        <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                          <figure class="thumbnail-josip"><a href="team-member.html"><img width="270" height="270" src="{{ secretaria.foto.url }}" alt=""/></a>
+                                            <div class="thumbnail-desc">
+                                              <h5 class="thumbnail-josip-title text-bold text-white">{{ secretaria.nombre_completo}}</h5>
+                                          </figure>
                                         </div>
                                       {% endfor %}
                                       </div>
@@ -145,16 +133,13 @@
                               </div>                              
                               <div data-filter="Corrective Exercises" class="col-md-12 isotope-item">
                                     <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-center text-left">
+                                      <div class="range range-xs-center">
                                       {% for auxiliar in auxiliares %}
-                                        <div class="cell-xs-8 cell-md-4 offset-top-41 offset-md-top-0 inset-md-right-30">
-                                          <div class="unit unit-xl-horizontal unit-lg-horizontal unit-md-vertical unit-sm-horizontal unit-xs-horizontal unit-spacing-sm">
-                                            <div class="unit-left"><img src="{{ auxiliar.foto.url }}" width="110" height="110" alt="" class="img-responsive"/>
-                                            </div>
-                                          </div>
-                                            <div class="unit-body">
-                                              <h5 class="text-bold text-primary">{{ auxiliar.nombre_completo}}</h5>
-                                            </div>
+                                        <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                          <figure class="thumbnail-josip"><a href="team-member.html"><img width="270" height="270" src="{{ auxiliar.foto.url }}" alt=""/></a>
+                                            <div class="thumbnail-desc">
+                                              <h5 class="thumbnail-josip-title text-bold text-white">{{ auxiliar.nombre_completo}}</h5>
+                                          </figure>
                                         </div>
                                       {% endfor %}
                                       </div>
