--- a/web/templates/carrera/navegation.html
+++ b/web/templates/carrera/navegation.html
@@ -37,14 +37,18 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '/' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li><a href="/carrera/admision"><span>Admisión</span></a></li>
-                            <li><a href="#"><span>Carrera</span></a>
-                                <ul class="rd-navbar-dropdown">
-                                    <li><a href="#"><span class="text-middle">Plan Estudios</span></a></li>
-                                    <li><a href="#"><span class="text-middle">Perfil Profesional</span></a></li>
-                                </ul>
+                            <li><a href="#"><span>Quienes Somos</span></a>
+                              <ul class="rd-navbar-dropdown">
+                                  <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
+                                  <li><a href="/carrera/perfil"><span class="text-middle">Perfil Profesional</span></a></li>
+                                  <li><a href="/carrera/mision"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
+                              </ul>
                             </li>
-                            <li class="{% active_menu '/docentes' %}"><a href="/docentes"><span>Docentes</span></a></li>
+                            <li><a href="/carrera/admision"><span>Admisión</span></a></li>
+                            <!--li><a href="#"><span>Carrera</span></a-->
+                            </li>
+                            <li><a href="/carrera/docentes"><span>Docentes</span></a></li>
                             <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a>
@@ -59,7 +63,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#"><span>Contacto</span></a></li>
+                            <li><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
                 </div>
