Se centraliza la navegacion

--- a/web/templates/carrera/base.html
+++ b/web/templates/carrera/base.html
@@ -29,7 +29,7 @@
         <!-- Page Head-->
         <header class="page-head">
             <!-- RD Navbar minimal-->
-            {% block navegation %}{% include 'carrera/navegation.html' %}{% endblock %}
+            {% block navegation %}{% include 'navegation.html' %}{% endblock %}
             {% block swiper %}{% include 'carrera/swiper.html' %}{% endblock %}
         </header>
         <!-- Page Contents-->
